--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ImmoDash</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .hidden { display: none; }
-  </style>
 </head>
 <body>
   <div id="login-screen" class="screen">
@@ -15,11 +12,11 @@
     <p>Veuillez vous identifier :</p>
     <input type="text" id="prenom" placeholder="Prénom">
     <input type="text" id="nom" placeholder="Nom">
-    <button onclick="login()">Accéder au Dashboard</button>
+    <button onclick="showDashboard()">Accéder au Dashboard</button>
   </div>
 
   <div id="dashboard-screen" class="screen hidden">
-    <h2>Tableau de bord - <span id="agent-connecte"></span></h2>
+    <h2>Tableau de bord</h2>
     <form id="formulaire">
       <select id="etat">
         <option>Offre</option>
@@ -32,8 +29,16 @@
       <input type="text" id="adresse" placeholder="Adresse du bien">
       <input type="number" id="prix" placeholder="Prix de vente TTC">
       <input type="number" id="net" placeholder="Prix net vendeur">
-      <select id="agent-mandat"></select>
-      <select id="agent-vente"></select>
+      <select id="agent-mandat">
+        <option value="Agent 1">Agent 1</option>
+        <option value="Agent 2">Agent 2</option>
+        <option value="Agent 3">Agent 3</option>
+      </select>
+      <select id="agent-vente">
+        <option value="Agent 1">Agent 1</option>
+        <option value="Agent 2">Agent 2</option>
+        <option value="Agent 3">Agent 3</option>
+      </select>
       <button type="submit">Ajouter</button>
     </form>
 
@@ -49,83 +54,6 @@
     </table>
   </div>
 
-  <script>
-    function login() {
-      const prenom = document.getElementById("prenom").value.trim();
-      const nom = document.getElementById("nom").value.trim();
-      if (!prenom || !nom) return alert("Veuillez entrer vos prénom et nom.");
-
-      const nomComplet = \`\${prenom} \${nom}\`;
-      localStorage.setItem("agent", nomComplet);
-      document.getElementById("agent-connecte").textContent = nomComplet;
-
-      // Remplir les menus déroulants
-      const agents = [nomComplet, "Alice Dupont", "Bob Martin", "Claire Leroy"];
-      ["agent-mandat", "agent-vente"].forEach(id => {
-        const select = document.getElementById(id);
-        select.innerHTML = "";
-        agents.forEach(agent => {
-          const option = document.createElement("option");
-          option.value = agent;
-          option.textContent = agent;
-          select.appendChild(option);
-        });
-      });
-
-      document.getElementById("login-screen").classList.add("hidden");
-      document.getElementById("dashboard-screen").classList.remove("hidden");
-      chargerDonnees();
-    }
-
-    document.getElementById("formulaire").addEventListener("submit", function(e) {
-      e.preventDefault();
-
-      const etat = document.getElementById("etat").value;
-      const mandat = document.getElementById("mandat").value;
-      const vendeur = document.getElementById("vendeur").value;
-      const acquereur = document.getElementById("acquereur").value;
-      const adresse = document.getElementById("adresse").value;
-      const prix = parseFloat(document.getElementById("prix").value);
-      const net = parseFloat(document.getElementById("net").value);
-      const mandatAgent = document.getElementById("agent-mandat").value;
-      const venteAgent = document.getElementById("agent-vente").value;
-
-      const commissionTTC = prix - net;
-      const commissionHT = commissionTTC / 1.2;
-
-      const ligne = { etat, mandat, vendeur, acquereur, adresse, prix, net, commissionHT, commissionTTC, mandatAgent, venteAgent };
-      const donnees = JSON.parse(localStorage.getItem("transactions") || "[]");
-      donnees.push(ligne);
-      localStorage.setItem("transactions", JSON.stringify(donnees));
-      ajouterLigneTableau(ligne);
-      this.reset();
-    });
-
-    function ajouterLigneTableau(ligne) {
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td>\${ligne.etat}</td><td>\${ligne.mandat}</td><td>\${ligne.vendeur}</td><td>\${ligne.acquereur}</td>
-        <td>\${ligne.adresse}</td><td>\${ligne.prix}</td><td>\${ligne.net}</td>
-        <td>\${ligne.commissionHT.toFixed(2)}</td><td>\${ligne.commissionTTC.toFixed(2)}</td>
-        <td>\${ligne.mandatAgent}</td><td>\${ligne.venteAgent}</td>
-      `;
-      document.getElementById("tableau").appendChild(tr);
-    }
-
-    function chargerDonnees() {
-      const donnees = JSON.parse(localStorage.getItem("transactions") || "[]");
-      donnees.forEach(ajouterLigneTableau);
-    }
-
-    window.onload = function() {
-      const agent = localStorage.getItem("agent");
-      if (agent) {
-        document.getElementById("agent-connecte").textContent = agent;
-        document.getElementById("login-screen").classList.add("hidden");
-        document.getElementById("dashboard-screen").classList.remove("hidden");
-        login();
-      }
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
